# ViconReader2019

ViconReader2019/: CMakeLists.txt  README.md
ViconReader2019/examples/: CMakeLists.txt  cmakeTest.cpp  hwclient.c  hwserver.c
ViconReader2019/include/: message_helpers.h
ViconReader2019/src/: CMakeLists.txt  message_helpers.cpp  reader.cpp
